--- a/instaclone/src/App.scss
+++ b/instaclone/src/App.scss
@@ -1,33 +1,24 @@
+// page wrapper
+
 .main-wrapper {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+// search bar/nav styling
 
-// .App-header {
-//   background-color: #282c34;
-//   min-height: 100vh;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: center;
-//   font-size: calc(10px + 2vmin);
-//   color: white;
-// }
+.nav-bar {
+  display: flex;
+  flex-direction: row;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .ig-icon {
+    height: 50px;
+    width: 50px;
+    object-fit: cover;
   }
-  to {
-    transform: rotate(360deg);
+
+  .icons {
+    display: flex;
   }
 }
